--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">HCan</string>
     <string name="notity_id">HCan</string>
+    <string name="static_one_long_label">更新下载</string>
+    <string name="static_one_short_label">更新下载</string>
 </resources>
